# yardstiq-scaleway

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
tests/: requirements.txt
yardstiq_scaleway/: plugin_loader.py  scaleway_provider.py  versions.py
