[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yardstiq-scaleway"
version = "0.1.0"
description = "Scaleway provider implementation for Yardstiq"
requires-python = ">=3.12"

dependencies = [
    "yardstiq>=0.1.0",
    "scaleway-qaas-client>=0.1.23",
    "qami>=0.1.0",
]

[project.urls]
Repository = "https://github.com/scaleway/yardstiq-scaleway"

[project.entry-points."yardstiq.plugins"]
scaleway = "yardstiq_scaleway.plugin_loader"